--- a/01_set_up_environment_and_data/installation/liveproject.yml
+++ b/01_set_up_environment_and_data/installation/liveproject.yml
@@ -7,9 +7,9 @@ channels:
   - ranaroussi
   - jiayi_anaconda
 dependencies:
-  - autopep8=1.5.3
+  - autopep8
   - ipykernel
-  - joblib=0.15.1
+  - joblib
   - jupyter
   - jupyterlab
   - lightgbm
@@ -19,17 +19,17 @@ dependencies:
   - pandas
   - pandas-datareader
   - patsy
-  - pip=20.1.1
+  - pip
   - pytables
-  - python=3.7.7
+  - python=3.8
   - requests
   - scikit-image
   - scikit-learn
   - seaborn
   - shap
-  - snappy=1.1.8
+  - snappy
   - statsmodels
   - ta-lib
   - pip:
-    - alphalens==0.4.0
-    - empyrical==0.5.3
+    - alphalens
+    - empyrical
